[package]
name = "asset_structure"
version = "0.1.1"
edition = "2024"
description = "minimal asset structure tree for projects"
license = "MIT"
keywords = ["filesystem","dir"]
# documentation = "https://docs.rs/asset_structure"
repository = "https://github.com/x-i-a-o-w/asset_structure"
include = [
    "Cargo.toml",
    "LICENSE",
    "README.md",
	"examples",
]
[dependencies]

[lib]
name="asset_structure"
path="src/lib.rs"
bench = true           
doc = true             
proc-macro = false     
crate-type=["lib"]

[[example]]
name="hello_file"
path = "examples/hello_file.rs"
